# safe

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  CHANGES.txt  LICENSE  README.md  Safe.hs  Test.hs  make-docs.bat  push.bat  safe.cabal  travis.hs
.github/workflows/: ci.yml
Safe/: Exact.hs  Foldable.hs  Partial.hs  Util.hs
